--- a/meson.build
+++ b/meson.build
@@ -24,7 +24,8 @@ configure_file(output: 'config.h', configuration: conf)
 config_h_dir = include_directories('.')
 
 c_args = [
-  '-include', 'config.h'
+  '-include', 'config.h',
+  '-DHANDY_USE_UNSTABLE_API'
 ]
 
 sources = files()
@@ -37,7 +38,10 @@ subdir('tests')
 dependencies = [
 	dependency('gobject-2.0'),
     dependency('glib-2.0'),
-    dependency('gtk+-3.0')
+    dependency('gtk+-3.0'),
+    dependency('libhandy-0.0'),
+    dependency('gee-0.8'),
+    meson.get_compiler('vala').find_library('posix'),
 ]
 
 e = executable('me.Appadeia.systeminformation',
