--- a/src/meson.build
+++ b/src/meson.build
@@ -4,8 +4,14 @@ sources += files(
     'controllers/AppController.vala',
     
     'views/AppView.vala',
+    'views/SideBar.vala',
+    'views/SimpleView.vala',
+    'views/ProcessorView.vala',
+    'views/OsReleaseView.vala',
+
+    'widgets/DataRow.vala',
 
     'Application.vala',
     'Main.vala',
-    'Window.vala'
+    'Window.vala',
 )
