Added data/images/me.Appadeia.systeminformation-symbolic.svg data/images/me.Appadeia.systeminformation.png data/images/me.Appadeia.systeminformation.svg src/controllers/AppController.vala src/meson.build src/views/DisplayView.vala src/views/OsReleaseView.vala src/views/SideBar.vala src/widgets/DataRow.vala.

--- a/src/meson.build
+++ b/src/meson.build
@@ -8,6 +8,7 @@ sources += files(
     'views/SimpleView.vala',
     'views/ProcessorView.vala',
     'views/OsReleaseView.vala',
+    'views/DisplayView.vala',
 
     'widgets/DataRow.vala',
 
